--- a/style.css
+++ b/style.css
@@ -36,6 +36,9 @@ p {
   text-align: center;
   box-shadow: inset 0 5px 5px rgba(0, 0, 0, 0.125);
 }
+.knowledge-entity--margin-top {
+  margin-top: 1em;
+}
 .knowledge-entity__item {
   display: block;
   padding: 0.3em;
@@ -48,6 +51,16 @@ p {
   padding: 0.3em;
   font-size: 0.8em;
   color: #555555;
+}
+.knowledge-entity__version {
+  font-size: 0.7em;
+  color: #bfbfbf;
+}
+.knowledge-entity__version::before {
+  content: '[';
+}
+.knowledge-entity__version::after {
+  content: ']';
 }
 .knowledge-entity--level-5 {
   border-color: #428bca;
@@ -63,4 +76,16 @@ p {
 }
 .knowledge-entity--level-1 {
   border-color: #d9534f;
+}
+.list-table {
+  border-spacing: 0;
+  border-collapse: collapse;
+}
+.list-table td {
+  border-bottom: 1px solid #bfbfbf;
+  padding-bottom: 1em;
+}
+.list-table tr:last-child td {
+  border-bottom: 0;
+  padding-bottom: 0;
 }
