--- a/style.less
+++ b/style.less
@@ -59,6 +59,10 @@ p {
    text-align: center;
    box-shadow: inset 0 5px 5px rgba(0,0,0,.125);
 
+   &--margin-top {
+      margin-top: 1em;
+   }
+
    &__item {
       display: block;
       padding: 0.3em;
@@ -73,6 +77,19 @@ p {
       font-size: 0.8em;
       color: @gray;
    }
+
+   &__version {
+      font-size: 0.7em;
+      color: @gray-light;
+
+      &::before {
+         content: '[';
+      }
+
+      &::after {
+         content: ']';
+      }
+   }
 }
 
 .generate-knowledge-entity--level(5);
@@ -83,4 +100,21 @@ p {
       border-color: @@temp;
    }
    .generate-knowledge-entity--level((@i - 1));
+}
+
+.list-table {
+   border-spacing: 0;
+   border-collapse: collapse;
+
+   td {
+      border-bottom: 1px solid @gray-light;
+      padding-bottom: 1em;
+   }
+
+   tr:last-child {
+      td {
+         border-bottom: 0;
+         padding-bottom: 0;
+      }
+   }
 }
