--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@ p {
 .container {
   width: 1000px;
   margin: 3em auto;
+  background-color: #eeeeee;
   border-width: 1px;
   padding: 1em;
-  background-color: #eeeeee;
   border-style: solid;
   border-color: #bfbfbf;
   border-radius: 5px;
@@ -34,7 +34,7 @@ p {
   border-style: solid;
   border-radius: 3px;
   text-align: center;
-  box-shadow: inset 0 5px 5px rgba(0, 0, 0, 0.125);
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 2px 5px rgba(0, 0, 0, 0.125);
 }
 .knowledge-entity--margin-top {
   margin-top: 1em;
@@ -88,4 +88,17 @@ p {
 .list-table tr:last-child td {
   border-bottom: 0;
   padding-bottom: 0;
+}
+.block {
+  margin-bottom: 1em;
+  background-color: #FFF;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.125);
+  border-width: 1px;
+  padding: 1em;
+  border-style: solid;
+  border-color: #bfbfbf;
+  border-radius: 5px;
+}
+.block--no-margin {
+  margin-bottom: 0;
 }
