--- a/style.less
+++ b/style.less
@@ -23,16 +23,20 @@ p {
    margin: 0.5em 0;
 }
 
-.container {
-   width: 1000px;
-   margin: 3em auto;
+.block-layout() {
    border-width: 1px;
    padding: 1em;
 
-   background-color: @gray-lighter;
    border-style: solid;
    border-color: @gray-light;
    border-radius: 5px;
+}
+
+.container {
+   width: 1000px;
+   margin: 3em auto;
+   background-color: @gray-lighter;
+   .block-layout();
 }
 
 .info-list {
@@ -57,7 +61,7 @@ p {
    border-style: solid;
    border-radius: 3px;
    text-align: center;
-   box-shadow: inset 0 5px 5px rgba(0,0,0,.125);
+   box-shadow: inset 0 3px 5px rgba(0,0,0,.125), 0 2px 5px rgba(0,0,0,.125);
 
    &--margin-top {
       margin-top: 1em;
@@ -116,5 +120,17 @@ p {
          border-bottom: 0;
          padding-bottom: 0;
       }
+   }
+}
+
+.block {
+   margin-bottom: 1em;
+
+   background-color: #FFF;
+   box-shadow: 0 3px 5px rgba(0,0,0,.125);
+   .block-layout();
+
+   &--no-margin {
+      margin-bottom: 0;
    }
 }
