--- a/style.less
+++ b/style.less
@@ -70,13 +70,11 @@ p {
    &__item {
       display: block;
       padding: 0.3em;
-      border-bottom-width: 1px;
-      border-bottom-style: solid;
-      border-color: @gray-light;
    }
 
    &__level {
       display: block;
+      border-top: solid 1px @gray-light;
       padding: 0.3em;
       font-size: 0.8em;
       color: @gray;
